test/expected/declare_o_arrow_i.out
declare -> as operator returning int
                                 ^
34: error: operator -> must return a pointer to struct, union, or class
